# clinical-trials-mcp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  PROFILE_README.md  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_server.py
data/raw/: clinical_documents_with_metadata_final.json
data/vector_database/: clincaldocs_milvus.db
database_creation/: __init__.py  chunker.py  create_db.py  create_vectordb.py  models.py  playground.ipynb  testing.py
docs/: DATABASE_SCHEMA.md  VECTOR_STORE_SCHEMA.md
examples/: setup_example.py
examples/sample_data/: .gitkeep
notebooks/: experiments.ipynb
src/: __init__.py  config.py  database.py  matching.py  server.py  testing.py  vectorstore.py
