[project]
name = "clinical-trials-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "authlib==1.6.1",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "build==1.3.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "chromadb==1.0.17",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "cramjam==2.11.0",
    "cryptography==45.0.6",
    "cyclopts==3.22.5",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docstring-parser==0.17.0",
    "docutils==0.22",
    "durationpy==0.10",
    "email-validator==2.2.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastmcp==2.11.3",
    "fastparquet==2024.11.0",
    "filelock==3.19.1",
    "flatbuffers==25.2.10",
    "fsspec==2025.7.0",
    "google-auth==2.40.3",
    "google-genai==1.30.0",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "inquirerpy==0.3.4",
    "instructorembedding==1.0.1",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonschema==4.25.0",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kubernetes==33.1.0",
    "lazy-object-proxy==1.11.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mcp==1.13.0",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "oauthlib==3.3.1",
    "onnxruntime==1.22.1",
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opencv-contrib-python==4.11.0.86",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.36.0",
    "opentelemetry-exporter-otlp-proto-common==1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
    "opentelemetry-proto==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "orjson==3.11.2",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "parse==1.20.2",
    "parso==0.8.4",
    "pathable==0.4.4",
    "pfzy==0.3.4",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "posthog==5.4.0",
    "prompt-toolkit==3.0.51",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "psycopg2>=2.9.11",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyperclip==1.9.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.1",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.1.0",
    "rich-rst==1.3.1",
    "rpds-py==0.27.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "sentence-transformers==5.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlmodel>=0.0.27",
    "sse-starlette==3.0.2",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.0",
    "torch==2.8.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.1",
    "zipp==3.23.0",
]
